--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 
 .master-header{
   text-align: center;
-  font-size: 36px;
+  font-size: 26px;
   color: rgb(11, 167, 71);
 }
 
@@ -13,22 +13,22 @@
 
 .divider-large
 {
-  border-top: 2px solid royalblue;
-  border-radius: 2px;
+  border-top: 10px solid royalblue;
 }
 
 .divider-small{
   background-color:darkblue;
-  height: 16px;
+  height: 2px;
 }
 
 nav {
 background-color: rgb(224, 107, 34);
-z-index: 1;
 position:fixed;
-height: auto;
-width: 17em;
-overflow: auto;
+z-index: 1;
+top: 1px;
+height:38em;
+width:20em;
+overflow-y:auto;
 }
 
 details > summary {
@@ -40,20 +40,30 @@ summary::-webkit-details-marker {
 }
 
 summary::after {
-  content: "⬇";
+  content: "+";
+  
 }
 details[open] summary:after {
   content: "—";
 }
 
-nav .nav-link-sub{
-  margin-left: 15px;
+nav .nav-link-sub, .nav-link{
+  display: inline-block;
+  
+
   
 }
 
 nav .nav-link{
-  padding: 15px 2px;
-  
+padding-top: 5px;
+padding-right: 5px;
+margin: 6px 2px;
+font-weight: bold;
+}
+
+nav .nav-link-sub{
+  padding: 5px 0px 5px 30px;
+
 }
 
 body{
@@ -65,14 +75,16 @@ main {
   display:block;
   position: absolute;
   top:2em;
-  left:19em;
-  width: 75vw;
+  left:21em;
+  width: 52em;;
   text-align: justify;
   background-color:rgba(18, 126, 214, 0.199)
 }
 
 a {font-style: normal;
-font-size:16px;}
+font-size:16px;
+text-decoration:none;
+color: gainsboro;}
 
 .highlight {font-weight: bold;}
 
