--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,13 @@
-@media screen (max-width:768px) and (min-width:480px) {
+@media screen and (min-width:480px) and (max-width:768px), (orientation:landscape) {
   main {width:73vw;}
-  nav {width:20em;}
+  nav {width:20vw;}
+  body {width: 100%;}
 }
 
-@media only screen and (orientation:landscape) {
-  main{overflow: auto;}
-  nav{overflow: auto;}
-  
-}
 .master-header{
   text-align: center;
   font-size: 26px;
   color: rgb(11, 167, 71);
-}
-
-.master-header-box{
 }
 
 .divider-large
@@ -28,15 +21,15 @@
 }
 
 nav {
-background-color:rgba(132, 157, 167, 0.459);
-position:fixed;
-z-index: 1;
-top: 1px;
-height:38em;
-width:20em;
-overflow-y:auto;
-border: 2px solid red;
-border-radius: 10px;
+  background-color:rgba(132, 157, 167, 0.459);
+  position:fixed;
+  z-index: 1;
+  top: 1px;
+  height:38em;
+  width:20em;
+  overflow-y:auto;
+  border: 2px solid red;
+  border-radius: 10px;
 }
 
 details > summary {
@@ -56,17 +49,14 @@ details[open] summary:after {
 }
 
 nav .nav-link-sub, .nav-link{
-  display: inline-block;
-  
-
-  
+  display: inline-block; 
 }
 
 nav .nav-link{
-padding-top: 5px;
-padding-right: 6px;
-margin: 6px 3px;
-font-weight: bold;
+  padding-top: 5px;
+  padding-right: 6px;
+  margin: 6px 3px;
+  font-weight: bold;
 }
 
 nav .nav-link-sub{
@@ -91,9 +81,9 @@ main {
 }
 
 a {font-style: normal;
-font-size:16px;
-text-decoration:none;
-color: gainsboro;}
+  font-size:16px;
+  text-decoration:none;
+  color: gainsboro;}
 
 .highlight {font-weight: bold;}
 
@@ -101,11 +91,11 @@ color: gainsboro;}
 
 .gtk {
   background-color: rgba(224, 14, 14, 0.178);
-display:block;
-width: fit-content;
-padding-right: 100px;
-margin: auto;
-text-align: center;}
+  display:block;
+  width: fit-content;
+  padding-right: 100px;
+  margin: auto;
+  text-align: center;}
 
 ul > li, ol > li{
   padding: 4px 4px;
