--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,10 @@
   main {width:68vw;}
   nav {width:30vw;
   height: auto;
-overflow: auto;
-display: block;}
+  overflow: auto;}
   body {width: 100vw;}
   .master-header{font-size: 16px;}
 }
-
-
 
 .master-header{
   text-align: center;
@@ -24,18 +21,6 @@ display: block;}
 .divider-small{
   background-color:darkblue;
   height: 2px;
-}
-
-nav {
-  background-color:rgba(132, 157, 167, 0.459);
-  position:fixed;
-  z-index: 1;
-  top: 1px;
-  height:98vh;
-  width:22vw;
-  overflow-y:auto;
-  border: 2px solid red;
-  border-radius: 10px;
 }
 
 details > summary {
@@ -72,19 +57,36 @@ nav .nav-link-sub{
 
 body{
   width: 100vw;
-  background-color:rgba(228, 19, 47, 0.422);
+  background-image: url(https://r4.wallpaperflare.com/wallpaper/244/9/297/html-programming-code-blue-wallpaper-8960686d01aa2debe687085fc071367d.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: auto;
+  background-color:rgba(155, 203, 235, 0.769);
 }
 
 main {
   display:block;
   position:fixed;
-  overflow: auto;
-  top:1vh;
-  left:23vw;
-  width:77vw;
-  height: 98vh;
+  overflow:auto;
+  /*top:1vh;*/
+  left:22.5vw;
+  width:77.5vw;
+  height: 100vh;
   text-align: justify;
-  background-color:rgba(22, 148, 231, 0.904);
+  background-color:rgba(146, 156, 172, 0.498);
+  border-radius: 6px;
+  color:
+}
+
+nav {
+  background-color:rgba(205, 212, 224, 0.71);
+  position:fixed;
+  z-index: 1;
+  top: 1px;
+  height:100vh;
+  width:22vw;
+  overflow-y:auto;
+  border-right: 6px solid rgba(205, 145, 123, 0.463);
 }
 
 a {font-style: normal;
@@ -97,7 +99,7 @@ a {font-style: normal;
 .color-highlight{color: rgb(11, 209, 11);}
 
 .gtk {
-  background-color: rgba(224, 14, 14, 0.178);
+  background-color: rgba(209, 97, 97, 0.6);
   display:block;
   width: fit-content;
   padding-right: 100px;
@@ -109,15 +111,16 @@ ul > li, ol > li{
 }
 
 P, h1, h2, h3, h4 {
-  padding:0 6px 0 15px;
+  padding:0 10px 0 15px;
 }
 
-h1 {
+.main-title {
 text-decoration: underline;
 text-align: center;
-color:burlywood;
+color:black;
 display: block;
-background-color: blue;
+background-color:rgba(58, 51, 51, 0.432);
 height: 50px;
 padding-top: 10px;
+font-size: 40px;
 }
