--- a/styles.css
+++ b/styles.css
@@ -9,18 +9,37 @@
 
 .master-header{
   text-align: center;
-  font-size: 26px;
-  color: rgb(11, 167, 71);
+  font-size: 50px;
+  font-style: oblique;
+  font-family: cursive;
+  color: black;
 }
 
-.divider-large
-{
-  border-top: 10px solid royalblue;
+.master-header-box{
+  background-image:url(https://wallpapercave.com/dwp1x/wp4009916.png);
+  background-position: center;
+  background-size: cover;
+  height: fit-content;
+  display: inline-block;
+  width:18.8em;
+  height: 9em;
+  margin-bottom: -0.65em;
+  background-position-x: left;
+
 }
 
 .divider-small{
-  background-color:darkblue;
+  background-color:gray;
+  height: 3px;
+  margin: 1vh 0;
+}
+
+.divider-short{
+  background-color:gray;
+  display: block;
+  margin: auto;
   height: 2px;
+  width:16em;
 }
 
 details > summary {
@@ -57,61 +76,70 @@ nav .nav-link-sub{
 
 body{
   width: 100vw;
-  background-image: url(https://r4.wallpaperflare.com/wallpaper/244/9/297/html-programming-code-blue-wallpaper-8960686d01aa2debe687085fc071367d.jpg);
+  background-image: url(https://img.freepik.com/free-vector/dark-gray-blurred-background_1034-243.jpg?w=740&t=st=1688166675~exp=1688167275~hmac=4b6caad70b8a21de31418ded7708b5ef6ea5a74ca15a843274151f2a05233872);
   background-repeat: no-repeat;
   background-size: cover;
   margin: auto;
-  background-color:rgba(155, 203, 235, 0.769);
+  background-color:white;
 }
 
 main {
   display:block;
   position:fixed;
   overflow:auto;
-  /*top:1vh;*/
   left:22.5vw;
   width:77.5vw;
   height: 100vh;
   text-align: justify;
-  background-color:rgba(146, 156, 172, 0.498);
   border-radius: 6px;
-  color:
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 nav {
-  background-color:rgba(205, 212, 224, 0.71);
+  background-repeat: no-repeat;
+  background-size:cover;
+  background-position-x: center;
   position:fixed;
   z-index: 1;
-  top: 1px;
   height:100vh;
   width:22vw;
   overflow-y:auto;
-  border-right: 6px solid rgba(205, 145, 123, 0.463);
+  border-right: 6px solid rgba(107, 104, 103, 0.475);
+  background-color: rgba(173, 216, 230, 0.162);
 }
 
-a {font-style: normal;
-  font-size:16px;
+#navbar a {font-style: normal;
+  font-size:1em;
   text-decoration:none;
-  color: rgb(20, 31, 184);}
+  color: black;
+}
 
 .highlight {font-weight: bold;}
 
-.color-highlight{color: rgb(11, 209, 11);}
+.color-highlight{color: rgb(3, 105, 3);}
 
 .gtk {
-  background-color: rgba(209, 97, 97, 0.6);
-  display:block;
+  display: block;
   width: fit-content;
   padding-right: 100px;
   margin: auto;
-  text-align: center;}
+  text-align: center;
+  padding-right: 5vw;
+}
 
 ul > li, ol > li{
   padding: 4px 4px;
+  line-height: 4vh;
 }
 
 P, h1, h2, h3, h4 {
   padding:0 10px 0 15px;
+}
+
+p{
+  line-height: 2em;
+  text-indent: 10px;
 }
 
 .main-title {
@@ -119,8 +147,27 @@ text-decoration: underline;
 text-align: center;
 color:black;
 display: block;
-background-color:rgba(58, 51, 51, 0.432);
-height: 50px;
+background-color:rgba(58, 51, 51, 0.372);
+height: 60px;
+width:74vw;
 padding-top: 10px;
+margin-left: 2px;
 font-size: 40px;
 }
+
+code{
+  display:block;
+  background-color: rgba(160, 167, 173, 0.521);
+  width: fit-content;
+  margin-left: 30px;
+  margin-top: -3vh;
+  margin-bottom: -1vh;
+  text-align: left;
+  padding-right: 7vw;
+  border-radius: 2px;
+  line-height: 2em;
+}
+
+hr {border: 3px solid grey;
+width: 70vw;}
+
