--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,13 @@
-@media screen and (min-width:480px) and (max-width:768px) {
-  main {display: contents;}
-  nav {width:40vw;
-  height: auto;
-  overflow: auto;}
+@media screen and (max-width:480px){
+  main {
+  width: 60vw;
+  height: 100vh;
+  }
+  nav {
+  width:40vw;
+  height:100vh;
+  overflow: auto;
+  }
 
 }
 
