--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,14 @@
 @media screen and (max-width:480px){
-  main {
-  width: 60vw;
+  #main-doc {
+  width: 100vw;
   height: 100vh;
   }
-  nav {
-  width:40vw;
-  height:100vh;
+  #navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  width:100%;
+  height:60px;
   overflow: auto;
   }
 
