--- a/styles.css
+++ b/styles.css
@@ -162,16 +162,44 @@ code{
 hr {border: 3px solid grey;
 width: 70vw;}
 
-@media screen and (max-width:480px){
-  #main-doc {
-  width: 100vw;
-  height: 100vh;
-  }
-  #navbar {
-  align-items: center;
-  width:22em;
-  height:60px;
-  overflow: auto;
+@media only screen and (max-width: 815px) {
+  /* For mobile phones: */
+  #navbar ul {
+    border: 1px solid;
+    height: 207px;
   }
 
+  #navbar {
+    background-color: white;
+    position: absolute;
+    top: 0;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    max-height: 275px;
+    border: none;
+    z-index: 1;
+    border-bottom: 2px solid;
+  }
+
+  #main-doc {
+    position: relative;
+    margin-left: 0px;
+    margin-top: 270px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  #main-doc {
+    margin-left: -10px;
+  }
+
+  code {
+    margin-left: -20px;
+    width: 100%;
+    padding: 15px;
+    padding-left: 10px;
+    padding-right: 45px;
+    min-width: 233px;
+  }
 }
