--- a/styles.css
+++ b/styles.css
@@ -165,7 +165,7 @@ width: 70vw;}
 @media only screen and (max-width: 815px) {
 
   #navbar {
-    position: absolute;
+    position: fixed;
     top: 0;
     padding: 0;
     margin: 0;
