--- a/styles.css
+++ b/styles.css
@@ -162,26 +162,17 @@ code{
 hr {border: 3px solid grey;
 width: 70vw;}
 
-@media only screen and (max-width: 815px) {
+@media only screen and (min-width: 1024px) {
 
   #navbar {
-    display: block;
-    position:absolute;
-    top: 0;
-    padding: 0;
-    margin: 0;
     width: 100%;
-  }
-
-  #main-doc {
-    position: relative;
-    margin-left: 0px;
+    height: 100%;
   }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 1080px) {
   #main-doc {
-    margin-left: -10px;
+    width: 75vw;
   }
 
 }
