--- a/styles.css
+++ b/styles.css
@@ -161,18 +161,22 @@ padding-top: 15px;
 @media only screen and (max-width: 480px) {
 
   #navbar {
-  position: fixed;
-   width: 40vw;
+    display: flex;
+    flex-direction: column;
+   width:30vw;
+   max-height: 100rem;
    margin-bottom: 100rem;
    padding-bottom: 5em;
   }
   #main {
-    left: 40vw;
-    width: 60vw;
-    max-width: 100rem;
+    display: flex;
+    flex-direction: column;
+    width: 70vw;
+    max-height: 100rem;
     margin-bottom: 5em;
-    position:fixed;
   }
+
+  body{width: 100%;}
 
   ul > li, ol > li{
     padding: 4px 4px;
