--- a/styles.css
+++ b/styles.css
@@ -60,9 +60,7 @@ body{
   width: 100vw;
   background-image: url(https://img.freepik.com/free-vector/dark-gray-blurred-background_1034-243.jpg?w=740&t=st=1688166675~exp=1688167275~hmac=4b6caad70b8a21de31418ded7708b5ef6ea5a74ca15a843274151f2a05233872);
   background-repeat: no-repeat;
-  background-size: cover;
-  margin: auto;
-  background-color:white;
+  background-size: cover;;
 }
 
 main {
@@ -176,7 +174,12 @@ padding-top: 15px;
     margin-bottom: 5em;
   }
 
-  body{width: 100%;}
+  body{
+    width: 100%;
+    background-image: url(https://img.freepik.com/free-vector/dark-gray-blurred-background_1034-243.jpg?w=740&t=st=1688166675~exp=1688167275~hmac=4b6caad70b8a21de31418ded7708b5ef6ea5a74ca15a843274151f2a05233872);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 
   ul > li, ol > li{
     padding: 4px 4px;
