--- a/styles.css
+++ b/styles.css
@@ -156,11 +156,11 @@ text-indent: 15px;
 padding-top: 15px;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 480px) and (orientation:portrait) {
 
   #navbar {
     display:block;
-
+  align-items: start;
    width:30vw;
    max-height: 100rem;
    margin-bottom: 100rem;
@@ -168,7 +168,7 @@ padding-top: 15px;
   }
   #main {
     display:block;
-
+    align-items: end;
     width: 70vw;
     max-height: 100rem;
     margin-bottom: 5em;
@@ -176,8 +176,7 @@ padding-top: 15px;
 
   body{
     width: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-image: none;
     background-color: aliceblue;
   }
 
