--- a/styles.css
+++ b/styles.css
@@ -168,6 +168,9 @@ padding-top: 15px;
   }
   #main {
     display:block;
+    position: absolute;
+    left: 30em;
+    text-overflow: clip;
     align-items: end;
     width: 70vw;
     max-height: 100rem;
@@ -175,7 +178,7 @@ padding-top: 15px;
   }
 
   body{
-    width: 100%;
+    max-width: 480px;
     background-image: none;
     background-color: aliceblue;
   }
