--- a/styles.css
+++ b/styles.css
@@ -160,19 +160,19 @@ padding-top: 15px;
 
   #navbar {
     display:block;
-  align-items: start;
-   width:30vw;
-   max-height: 100rem;
-   margin-bottom: 100rem;
-   padding-bottom: 5em;
+    align-items: start;
+    width:30rem;
+    max-height: 100rem;
+    margin-bottom: 100rem;
+    padding-bottom: 5em;
   }
   #main {
     display:block;
     position: absolute;
-    left: 30em;
+    left: 35rem;
     text-overflow: clip;
     align-items: end;
-    width: 70vw;
+    width: 65rem;
     max-height: 100rem;
     margin-bottom: 5em;
   }
@@ -187,14 +187,17 @@ padding-top: 15px;
     padding: 4px 4px;
     line-height: 4vh;
   }
-}
 
-@media only screen and (max-width: 1080px) {
-  #navbar{
-   
-  }
-  #main-doc {
-    
-  }
-
+  .main-title {
+    text-decoration: underline;
+    text-align: center;
+    color:black;
+    display:inline-block;
+    background-color:rgba(58, 51, 51, 0.372);
+    height: 60px;
+    width:50em;
+    padding-top: 10px;
+    margin-left: 6px;
+    font-size: 30px;
+    }
 }
