--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,6 @@ padding-top: 15px;
     position: fixed;
     left: 35em;
     text-overflow: clip;
-    align-items: end;
     width: 65em;
     max-height: 100rem;
     margin-bottom: 5em;
@@ -189,10 +188,9 @@ padding-top: 15px;
     text-decoration: underline;
     text-align: center;
     color:black;
-    display:inline-block;
+    display:block;
     background-color:rgba(58, 51, 51, 0.372);
     height: 60px;
-    width:50em;
     padding-top: 10px;
     margin-left: 6px;
     font-size: 30px;
