--- a/styles.css
+++ b/styles.css
@@ -159,16 +159,24 @@ padding-top: 15px;
 @media only screen and (max-width: 480px) and (orientation:portrait) {
 
   #navbar {
-    position: relative;
+    display: flex;
+    position:relative;
+    flex-direction: row;
+    flex: auto;
+    flex-wrap: wrap;
+    float: left;
     width:30em;
     max-height: 100rem;
     padding-bottom: 5em;
   }
   #main {
+    display: flex;
     position:relative;
-    left: 35em;
-    text-overflow: clip;
-    width: 65em;
+    flex-direction: row;
+    flex: auto;
+    flex-wrap: wrap;
+    float: right;
+    width:70em;
     max-height: 100rem;
     margin-bottom: 5em;
   }
