--- a/styles.css
+++ b/styles.css
@@ -160,9 +160,8 @@ padding-top: 15px;
 
   #navbar {
     display: flex;
-    position:relative;
+    position: relative;
     flex-direction: row;
-    flex: auto;
     flex-wrap: wrap;
     float: left;
     width:30em;
@@ -171,7 +170,7 @@ padding-top: 15px;
   }
   #main {
     display: flex;
-    position:relative;
+    position:fixed;
     flex-direction: row;
     flex: auto;
     flex-wrap: wrap;
@@ -192,15 +191,4 @@ padding-top: 15px;
     line-height: 4vh;
   }
 
-  .main-title {
-    text-decoration: underline;
-    text-align: center;
-    color:black;
-    display:block;
-    background-color:rgba(58, 51, 51, 0.372);
-    height: 60px;
-    padding-top: 10px;
-    margin-left: 6px;
-    font-size: 30px;
-    }
 }
