--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,8 @@ padding-top: 15px;
 
   #navbar {
     position: fixed;
-    width:30rem;
+    width:22rem;
+    max-width: 30em;
     max-height: 100rem;
     padding-bottom: 5em;
   }
