--- a/styles.css
+++ b/styles.css
@@ -159,7 +159,7 @@ padding-top: 15px;
 @media only screen and (max-width: 480px) {
 
   #navbar {
-    display: inline-block;
+    display:block;
     position: fixed;
     width:22rem;
     max-width: 30em;
