--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,7 @@ text-indent: 15px;
 padding-top: 15px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width:480px) and (max-width: 768px) {
 
   #navbar {
     display:block;
@@ -176,6 +176,7 @@ padding-top: 15px;
   }
 
   body{
+    width: 100;
     max-width: 480px;
     background-image: none;
     background-color: aliceblue;
