--- a/styles.css
+++ b/styles.css
@@ -156,27 +156,27 @@ text-indent: 15px;
 padding-top: 15px;
 }
 
-@media screen and (min-width:480px) and (max-width: 768px) {
+@media screen and (min-width:320px) and (max-width: 480px) {
 
   #navbar {
     display:block;
     position: fixed;
-    width:106px;
+    width:130px;
     max-width: 115px;
     max-height: 100%;
     padding-bottom: 5em;
   }
   #main {
     position: fixed;
-    left: 150px;
-    max-width: 330px;
+    left: 180px;
+    max-width: 150px;
     width:300px;
     max-height: 100%;
     margin-bottom: 5em;
   }
 
   body{
-    width: 100;
+    width: 100%;
     max-width: 480px;
     background-image: none;
     background-color: aliceblue;
