--- a/styles.css
+++ b/styles.css
@@ -166,7 +166,8 @@ padding-top: 15px;
     max-height: 100%;
     padding-bottom: 5em;
   }
-  #main {
+
+  #main-doc {
     position: fixed;
     left: 180px;
     max-width: 150px;
