--- a/styles.css
+++ b/styles.css
@@ -161,24 +161,22 @@ padding-top: 15px;
   #navbar {
     display:block;
     position: fixed;
-    width:130px;
-    max-width: 115px;
+    width:25%;
+    max-width:30%;
     max-height: 100%;
     padding-bottom: 5em;
   }
 
   #main-doc {
     position: fixed;
-    left: 180px;
-    max-width: 150px;
-    width:300px;
+    left:26%;
+    width:75%;
     max-height: 100%;
     margin-bottom: 5em;
   }
 
   body{
     width: 100%;
-    max-width: 480px;
     background-image: none;
     background-color: aliceblue;
   }
