--- a/styles.css
+++ b/styles.css
@@ -168,15 +168,17 @@ padding-top: 15px;
   }
 
   #main-doc {
+    display: block;
     position: fixed;
     left:26%;
-    width:75%;
+    width:73%;
     max-height: 100%;
     margin-bottom: 5em;
   }
 
   body{
-    width: 100%;
+    width:fit-content;
+    max-width:100%;
     background-image: none;
     background-color: aliceblue;
   }
@@ -185,5 +187,26 @@ padding-top: 15px;
     padding: 4px 4px;
     line-height: 4vh;
   }
+
+  .main-title {
+    text-decoration: underline;
+    text-align: center;
+    color:black;
+    display: inline-block;
+    background-color:rgba(58, 51, 51, 0.372);
+    width:72%;
+    padding-top: 10px;
+    margin-left: 6px;
+    font-size:20px;
+    }
+
+    .master-header-box{
+      display: block;
+      font-size: large;
+      color:black;
+      text-align: center;
+      margin: auto;
+    }
+
 
 }
