--- a/styles.css
+++ b/styles.css
@@ -168,8 +168,9 @@ padding-top: 15px;
   }
 
   #main-doc {
+    position: fixed;
     display: flex;
-    flex-direction: column;
+    flex-direction:row;
     flex-wrap: wrap;
     left:26%;
     width:73%;
@@ -193,12 +194,12 @@ padding-top: 15px;
     text-decoration: underline;
     text-align: center;
     color:black;
-    display: inline-block;
+    display: block;
     background-color:rgba(58, 51, 51, 0.372);
-    width:72%;
+    width:76%;
     padding-top: 10px;
     margin-left: 6px;
-    font-size:20px;
+    font-size:22px;
     }
 
     .master-header-box{
