--- a/styles.css
+++ b/styles.css
@@ -156,13 +156,12 @@ text-indent: 15px;
 padding-top: 15px;
 }
 
-@media screen and (min-width:320px) and (max-width: 480px) {
+@media screen and (min-width:320px) and (max-width: 480px) and (orientation:portrait) {
 
   #navbar {
     display:block;
     position: fixed;
-    width:25%;
-    max-width:30%;
+    width:22%;
     max-height: 100%;
     padding-bottom: 5em;
   }
@@ -194,7 +193,7 @@ padding-top: 15px;
     text-decoration: underline;
     text-align: center;
     color:black;
-    display: block;
+    display:inline-block;
     background-color:rgba(58, 51, 51, 0.372);
     width:76%;
     padding-top: 10px;
@@ -203,11 +202,9 @@ padding-top: 15px;
     }
 
     .master-header-box{
-      display: block;
       font-size: large;
       color:black;
       text-align: center;
-      margin: auto;
       background-image: none;
       background-color: aliceblue;
     }
