--- a/styles.css
+++ b/styles.css
@@ -161,7 +161,7 @@ padding-top: 15px;
   #navbar {
     display:block;
     position: fixed;
-    width:22%;
+    width:25%;
     max-height: 100%;
     padding-bottom: 5em;
   }
@@ -172,7 +172,9 @@ padding-top: 15px;
     flex-direction:row;
     flex-wrap: wrap;
     left:26%;
-    width:73%;
+    width:auto;
+    right: 1%;
+    z-index: 1;
     max-height: 100%;
     margin-bottom: 5em;
   }
@@ -190,10 +192,11 @@ padding-top: 15px;
   }
 
   .main-title {
+    display: block;
     text-decoration: underline;
     text-align: center;
     color:black;
-    display:inline-block;
+    margin: auto;
     background-color:rgba(58, 51, 51, 0.372);
     width:76%;
     padding-top: 10px;
