--- a/styles.css
+++ b/styles.css
@@ -192,16 +192,15 @@ padding-top: 15px;
   }
 
   .main-title {
-    display: block;
+    display: inline;
     text-decoration: underline;
     text-align: center;
     color:black;
-    margin: auto;
     background-color:rgba(58, 51, 51, 0.372);
     width:76%;
     padding-top: 10px;
     margin-left: 6px;
-    font-size:22px;
+    font-size:20px;
     }
 
     .master-header-box{
@@ -210,6 +209,21 @@ padding-top: 15px;
       text-align: center;
       background-image: none;
       background-color: aliceblue;
+      height: 1px;
+    }
+
+    .divider-small{
+      background-color:gray;
+      height: 3px;
+      margin: 1vh 0;
+    }
+    
+    .divider-short{
+      background-color:gray;
+      display: block;
+      margin-left:1em;
+      height: 2px;
+      width:100em;
     }
 
 
