--- a/styles.css
+++ b/styles.css
@@ -169,7 +169,9 @@ padding-top: 15px;
   #main-doc {
     position: fixed;
     display: flex;
-    flex-direction:row;
+    flex-direction:column;
+    float: left;
+    flex: content;
     flex-wrap: wrap;
     left:26%;
     width:auto;
@@ -188,18 +190,18 @@ padding-top: 15px;
 
   ul > li, ol > li{
     padding: 4px 4px;
-    line-height: 4vh;
+    line-height: 2vh;
   }
 
   .main-title {
-    display: inline;
+    display:block;
     text-decoration: underline;
     text-align: center;
     color:black;
     background-color:rgba(58, 51, 51, 0.372);
     width:76%;
     padding-top: 10px;
-    margin-left: 6px;
+    margin: 3em 0;
     font-size:20px;
     }
 
