--- a/styles.css
+++ b/styles.css
@@ -177,16 +177,10 @@ padding-top: 15px;
     width:auto;
     right: 1%;
     z-index: 1;
-    max-height: 100%;
+    max-height: 98%;
     margin-bottom: 5em;
   }
 
-  body{
-    width:fit-content;
-    max-width:100%;
-    background-image: none;
-    background-color: aliceblue;
-  }
 
   ul > li, ol > li{
     padding: 4px 4px;
@@ -201,7 +195,7 @@ padding-top: 15px;
     background-color:rgba(58, 51, 51, 0.372);
     width:76%;
     padding-top: 10px;
-    margin: 3em 0;
+    margin:auto;
     font-size:20px;
     }
 
