--- a/styles.css
+++ b/styles.css
@@ -173,7 +173,7 @@ padding-top: 15px;
   }
 
   #main-doc {
-    position: fixed;
+    position:relative;
     display: flex;
     flex-direction:column;
     float: left;
