--- a/styles.css
+++ b/styles.css
@@ -174,7 +174,7 @@ padding-top: 15px;
   }
 
   #main-doc {
-    position:relative;
+    position:fixed;
     display: flex;
     flex-direction:column;
     float: left;
