--- a/styles.css
+++ b/styles.css
@@ -176,7 +176,7 @@ padding-top: 15px;
   #main-doc {
     position:fixed;
     display: flex;
-    flex-direction:column;
+    flex-direction:row;
     float: left;
     flex: content;
     flex-wrap: wrap;
@@ -184,7 +184,7 @@ padding-top: 15px;
     width:auto;
     right: 1%;
     z-index: 1;
-    max-height: 98%;
+    max-height: 98vh;
     margin-bottom: 5em;
   }
 
@@ -231,10 +231,11 @@ padding-top: 15px;
 
     nav .nav-link{
       font-weight: bold;
+      padding-right:5% ;
     }
 
     #navbar a {font-style: normal;
-      font-size:10px;
+      font-size:14px;
       text-decoration:none;
       color: black;
     }
