--- a/styles.css
+++ b/styles.css
@@ -181,7 +181,7 @@ padding-top: 15px;
     flex: content;
     flex-wrap: wrap;
     left:26%;
-    width:auto;
+    width:50%;
     right: 1%;
     z-index: 1;
     max-height: 98vh;
