--- a/styles.css
+++ b/styles.css
@@ -175,17 +175,13 @@ padding-top: 15px;
 
   #main-doc {
     position:fixed;
-    display: flex;
-    flex-direction:row;
-    float: left;
-    flex: content;
-    flex-wrap: wrap;
     left:26%;
     width:75%;
     right: 1%;
     z-index: 1;
     max-height: 98vh;
     margin-bottom: 5em;
+    overflow-wrap:normal;
   }
 
 
