--- a/styles.css
+++ b/styles.css
@@ -171,6 +171,8 @@ padding-top: 15px;
     width:25%;
     height:fit-content;
     padding-bottom: 5em;
+    left: 0;
+    top: 0;
   }
 
   #main-doc {
@@ -181,7 +183,7 @@ padding-top: 15px;
     flex: content;
     flex-wrap: wrap;
     left:26%;
-    width:65%;
+    max-width:65vw;
     right: 1%;
     z-index: 1;
     max-height: 98vh;
