--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,8 @@ padding-top: 15px;
 
 @media screen and (min-width:320px) and (max-width: 480px) and (orientation:portrait) {
 
+  box-sizing: border-box;
+
   body{
     width: 100vw;
     height: 98vh;
