--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,7 @@ text-indent: 15px;
 padding-top: 15px;
 }
 
-@media screen and (min-width:320px) and (max-width: 480px) and (orientation:portrait) {
+/*@media screen and (min-width:320px) and (max-width: 480px) and (orientation:portrait) {
 
   body{
     width: 100vw;
