--- a/styles.css
+++ b/styles.css
@@ -250,3 +250,18 @@ padding-top: 15px;
     }
 
 }
+
+@media screen and (max-width: 768px) and (orientation:landscape) {
+  .main-title {
+    text-decoration: underline;
+    text-align: center;
+    color:black;
+    display: block;
+    background-color:rgba(58, 51, 51, 0.372);
+    height: 60px;
+    width:74vw;
+    padding-top: 10px;
+    margin-left: 6px;
+    font-size: 30px;
+    }
+}
