--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,8 @@ body{
   width: 100vw;
   background-image: url(https://img.freepik.com/free-vector/dark-gray-blurred-background_1034-243.jpg?w=740&t=st=1688166675~exp=1688167275~hmac=4b6caad70b8a21de31418ded7708b5ef6ea5a74ca15a843274151f2a05233872);
   background-repeat: no-repeat;
-  background-size: cover;;
+  background-size: cover;
+  box-sizing: border-box;
 }
 
 main {
@@ -74,6 +75,7 @@ main {
   border-radius: 6px;
   background-repeat: no-repeat;
   background-size: cover;
+  box-sizing: border-box;
 }
 
 nav {
@@ -262,6 +264,6 @@ padding-top: 15px;
     width:74vw;
     padding-top: 10px;
     margin-left: 6px;
-    font-size: 32px;
+      font-size: 32px;
     }
 }
