--- a/styles.css
+++ b/styles.css
@@ -185,19 +185,20 @@ padding-top: 15px;
   #main-doc {
     position:fixed;
     display: block;
-    overflow: scroll;
+    overflow: auto;
     left:26%;
     width: max-content;
     max-width:68vw;
     right: 1%;
+    z-index: 1;
     max-height: 98vh;
     margin-bottom: 1em;
+    box-sizing:border-box;
     visibility: hidden;
   }
 
   #main-doc > * {
     visibility: visible; /* Show the child elements */
-    overflow: scroll;
   }
 
   ul > li, ol > li{
