--- a/styles.css
+++ b/styles.css
@@ -183,8 +183,8 @@ padding-top: 15px;
   }
 
   #main-doc {
-    position:fixed;
-    display: block;
+   /* position:fixed;
+    display: block;*/
     overflow: auto;
     left:26%;
     width: max-content;
