--- a/styles.css
+++ b/styles.css
@@ -193,7 +193,7 @@ padding-top: 15px;
     z-index: 1;
     max-height: 98vh;
     margin-bottom: 1em;
-    box-sizing:border-box;
+    /*box-sizing:border-box;*/
     visibility: hidden;
   }
 
