--- a/styles.css
+++ b/styles.css
@@ -193,12 +193,13 @@ padding-top: 15px;
     z-index: 1;
     max-height: 98vh;
     margin-bottom: 1em;
-    box-sizing:border-box;
+    box-sizing:content-box;
     /*visibility: hidden;*/
   }
 
   #main-doc > * {
     visibility: visible; /* Show the child elements */
+    box-sizing: content-box;
   }
 
   ul > li, ol > li{
