--- a/styles.css
+++ b/styles.css
@@ -198,14 +198,16 @@ padding-top: 15px;
   }
 
   code{
-    display:block;
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     background-color: rgba(160, 167, 173, 0.521);
-    margin: auto;
     max-width:70vw;
     overflow-x: auto;
-    /*margin-left: 30px;
+    margin-left: 30px;
     margin-top: -3vh;
-    margin-bottom: -1vh;*/
+    margin-bottom: -1vh;
+    
     text-align: left;
     padding-left: 3px;
     padding-right: 1px;
