--- a/styles.css
+++ b/styles.css
@@ -198,11 +198,10 @@ padding-top: 15px;
   }
 
   code{
-    display:flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    display:block;
     background-color: rgba(160, 167, 173, 0.521);
     max-width:70vw;
+    padding-right: 15vw;
     overflow-x: auto;
     margin-left: 30px;
     margin-top: -3vh;
