--- a/styles.css
+++ b/styles.css
@@ -206,8 +206,7 @@ padding-top: 15px;
     margin-top: -3vh;
     margin-bottom: -1vh;
     text-align: left;
-    padding-left: 1em;
-    padding-right: 40em;
+    padding: auto;
     border-radius: 2px;
     line-height: 2em;
     white-space:break-spaces;
