--- a/styles.css
+++ b/styles.css
@@ -189,18 +189,22 @@ padding-top: 15px;
     font-size:10px;
     text-decoration:none;
     color: black;
-    text-indent: 6px;
+    text-indent: 2px;
   }
 
   nav .nav-link{
+    display: inline-block;
     padding-top: 5px;
-    padding-right: 6px;
-    margin: 6px 3px;
+    padding-right: 3px;
+    margin: 6px 1px;
     font-weight: bold;
+    text-align: left;
+    text-overflow: ellipsis;
   }
   
   nav .nav-link-sub{
-    padding: 5px 0px 5px 30px;
+    padding: 5px 0px 5px 10px;
+    text-align:left;
   
   }
 
@@ -260,30 +264,20 @@ padding-top: 15px;
       display: block;
       background-color:gray;
       height: 3px;
-      width: 30px;
+      margin-left: 6px;
+      width: 75px;
     }
     
     .divider-short{
       background-color:gray;
       display: block;
-      margin-left:1em;
-      height: 2px;
-      width:15px;
+      margin-left:6px;
+      height: 1px;
+      width:60px;
     }
 
     hr {border: 3px solid grey;
       width: 55vw;
-    }
-
-    nav .nav-link{
-      font-weight: bold;
-      padding-right:5% ;
-    }
-
-    #navbar a {font-style: normal;
-      font-size:14px;
-      text-decoration:none;
-      color: black;
     }
 
 }
