--- a/styles.css
+++ b/styles.css
@@ -182,8 +182,7 @@ padding-top: 15px;
     padding-bottom: 1em;
     left: 0;
     top: 0;
-    overflow-x: hidden;
-    overflow-y: auto;
+    overflow: auto;
   }
 
   #navbar a {font-style: normal;
