--- a/styles.css
+++ b/styles.css
@@ -178,7 +178,8 @@ padding-top: 15px;
     text-align: justify;
     position: fixed;
     width:25%;
-    height:fit-content;
+    height:98%;
+    margin: 1px;
     padding-bottom: 1em;
     left: 0;
     top: 0;
