--- a/styles.css
+++ b/styles.css
@@ -183,32 +183,31 @@ padding-top: 15px;
     padding-bottom: 1em;
     left: 0;
     top: 0;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x:hidden;
   }
 
   #navbar a {font-style: normal;
-    font-size:10px;
-    text-decoration:none;
     color: black;
     text-indent: 2px;
   }
 
   nav .nav-link{
-    display: inline-block;
+    display:block;
     padding-top: 5px;
     padding-right: 3px;
     margin: 6px 1px;
     font-weight: bold;
     text-align: left;
-    text-overflow: ellipsis;
+    font-size: 8px;
   }
   
   nav .nav-link-sub{
     padding: 5px 0px 5px 10px;
     text-align:left;
     color: black;
-    font-weight: 500;
-  
+    font-weight: 300;
+    font-size: 6px;  
   }
 
   #main-doc {
@@ -221,6 +220,7 @@ padding-top: 15px;
     z-index: 1;
     max-height: 98vh;
     margin-bottom: 1em;
+    
   }
 
   code{
@@ -275,7 +275,7 @@ padding-top: 15px;
     .divider-short{
       background-color:gray;
       display: block;
-      margin-left:6px;
+      margin-left:8px;
       height: 1px;
       width:60px;
     }
