Final optimization for mobile view

--- a/styles.css
+++ b/styles.css
@@ -177,9 +177,9 @@ padding-top: 15px;
     display:block;
     text-align: justify;
     position: fixed;
-    width:28%;
+    width:29%;
     height:98%;
-    margin: 1px;
+    margin: 1px 0;
     padding-bottom: 1em;
     left: 0;
     top: 0;
@@ -234,8 +234,8 @@ padding-top: 15px;
     display: block;
     overflow-y: auto;
     overflow-x: hidden;
-    left:28%;
-    width:72%;
+    left:28.5%;
+    width:72.5%;
     z-index: 1;
     max-height: 98vh;
     margin-bottom: 1em;
