--- a/styles.css
+++ b/styles.css
@@ -162,8 +162,8 @@ text-indent: 15px;
 padding-top: 15px;
 }
 
-/*--------------------------------------------------For mobile view----------------------------------------------*/
-@media screen and (min-width:320px) and (max-width: 480px) and (orientation:portrait) and (orientation:landscape) 
+/*---------------------------------For PORTRAIT mobile view----------------------------*/
+@media screen and (min-width:320px) and (max-width: 480px) and (orientation:portrait)
 {
   body{
     width: 100vw;
@@ -253,6 +253,128 @@ padding-top: 15px;
     border-radius: 2px;
     line-height: 2em;
     }
+
+  ul > li, ol > li{
+    padding: 4px 4px;
+    line-height: 3vh;
+  }
+
+  .main-title {
+    display:block;
+    text-decoration: underline;
+    text-align: center;
+    color:black;
+    background-color:rgba(58, 51, 51, 0.372);
+    width:76%;
+    padding-top: 10px;
+    margin:auto;
+    font-size:20px;
+    }
+
+    .master-header-box{
+      font-size: large;
+      color:black;
+      text-align: center;
+      background-image: none;
+      background-color: aliceblue;
+      height: 1px;
+      visibility: hidden;
+    }
+
+    .divider-small{
+      display: block;
+      background-color:gray;
+      height: 3px;
+      margin-left: 6px;
+      width: 75px;
+    }
+    
+    .divider-short{
+      background-color:gray;
+      display: block;
+      margin-left:8px;
+      height: 1px;
+      width:60px;
+    }
+
+    hr {border: 3px solid grey;
+      width: 55vw;
+    }
+
+}
+
+/*---------------------------------For LANDSCAPE mobile view----------------------------*/
+@media screen and (min-width:320px) and (max-width: 480px) and (orientation:landscape)
+{
+
+  #navbar {
+    display:block;
+    text-align: justify;
+    position: fixed;
+    width:29%;
+    height:98%;
+    margin: 1px 0;
+    padding-bottom: 1em;
+    left: 0;
+    top: 0;
+    overflow-y: auto;
+    overflow-x:hidden;
+  }
+
+  nav .nav-link-sub, .nav-link{
+    display: inline-block; 
+  }
+
+  #navbar a {
+    font-style: normal;
+    font-size: 10px;
+    color: black;
+    text-indent: 2px;
+    text-align: start;
+  }
+
+  nav .nav-link{
+    padding-top: 5px;
+    padding-right: 2px;
+    margin: 6px 1px;
+    font-weight: bold;
+    text-align: left;
+  }
+  
+  nav .nav-link-sub{
+    padding: 5px 0px 5px 10px;
+    text-align:left;
+    color: black;
+    font-weight: 500;
+  }
+
+  details > summary {
+    list-style:none;
+  }
+  summary::-webkit-details-marker {
+    display: none;
+  }
+  
+  summary::after {
+    content: "+";
+  }
+
+  details[open] summary:after {
+    content: "-";   
+  }
+
+  #main-doc {
+    position:fixed;
+    display: block;
+    overflow-y: auto;
+    overflow-x: hidden;
+    left:28.5%;
+    width:72.5%;
+    z-index: 1;
+    max-height: 98vh;
+    margin-bottom: 1em;
+  }
+
 
   ul > li, ol > li{
     padding: 4px 4px;
