--- a/styles.css
+++ b/styles.css
@@ -237,8 +237,9 @@ padding-top: 15px;
     overflow-y: auto;
     overflow-x: hidden;
     left:28.5%;
-    width:72.5%;
+    width:72%;
     z-index: 1;
+    padding-right: 1px;
     max-height: 98vh;
     margin-bottom: 1em;
   }
@@ -274,13 +275,17 @@ padding-top: 15px;
     }
 
     .master-header-box{
-      font-size: large;
-      color:black;
-      text-align: center;
-      background-image: none;
-      background-color: aliceblue;
-      height: 1px;
-      visibility: hidden;
+    background-image:url(https://wallpapercave.com/dwp1x/wp4009916.png);
+    background-size: cover;
+    height: fit-content;
+    top: 0;
+    width:100%;
+    height:15%;
+    margin-bottom: -0.3em;
+    background-size: 240px 100px;
+    background-position-x: -65px;
+    color:rgba(84, 95, 95, 0.014);
+    text-align: right;
     }
 
     .divider-small{
