--- a/styles.css
+++ b/styles.css
@@ -308,6 +308,14 @@ padding-top: 15px;
       width: 55vw;
     }
 
+    header {
+      font-weight: bold;
+      font-size:20px;
+      text-indent: 15px;
+      padding-top: 15px;
+      padding-left: 10px;
+      }
+
 }
 
 /*---------------------------------For LANDSCAPE mobile view----------------------------*/
